--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,26 +24,28 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.0",
-    "express": "^4.21.2",
-    "socket.io": "^4.8.1",
-    "ioredis": "^5.4.1",
-    "zod": "^3.24.1",
-    "tsyringe": "^4.8.0",
-    "reflect-metadata": "^0.2.2",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "winston": "^3.17.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
-    "express-rate-limit": "^7.5.0"
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
+    "tsyringe": "^4.8.0",
+    "winston": "^3.17.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.14.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
     "@vitest/coverage-v8": "^2.1.8",
@@ -51,7 +53,6 @@
     "prettier": "^3.3.0",
     "prisma": "^6.2.0",
     "supertest": "^7.0.0",
-    "@types/supertest": "^6.0.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vitest": "^2.1.8"
